# cmake_example

./: .gitignore  README.md  build.sh
src/: CMakeLists.txt  logging.cmake
src/main/: CMakeLists.txt  multi_printer.cc  single_printer.cc
src/printer/: CMakeLists.txt  printer.cc  printer.h
src/proto/: README.md  message.proto
